Fix badge spacing

--- a/assets/overrides.css
+++ b/assets/overrides.css
@@ -375,7 +375,7 @@ summary.list-menu__item {
   margin-bottom: 1rem;
 }
 
-.product__title--badges .badge + .badge {
+.product-badges .badge + .badge {
   margin-left: 0.5rem;
 }
 
